@@ -36,10 +36,12 @@ class TestLS(TestCaseWithTransport):
                                  ('a', 'hello\n'),
                                  ])
 
-    def ls_equals(self, value, args=None):
+    def ls_equals(self, value, args=None, recursive=True):
         command = 'ls'
         if args is not None:
             command += ' ' + args
+        if recursive:
+            command += ' -R'
         out, err = self.run_bzr(command)
         self.assertEqual('', err)
         self.assertEqualDiff(value, out)
@@ -108,19 +110,19 @@ class TestLS(TestCaseWithTransport):
                        'a\0a-id\0'
                        'subdir\0subdir-id\0', '--show-ids --null')
 
-    def test_ls_recursive(self):
+    def test_ls_no_recursive(self):
         self.build_tree(['subdir/', 'subdir/b'])
         self.wt.add(['a', 'subdir/', 'subdir/b', '.bzrignore'])
 
         self.ls_equals('.bzrignore\n'
                        'a\n'
                        'subdir/\n'
-                       , '--non-recursive')
+                       , recursive=False)
 
         self.ls_equals('V        .bzrignore\n'
                        'V        a\n'
                        'V        subdir/\n'
-                       , '--verbose --non-recursive')
+                       , '--verbose', recursive=False)
 
         # Check what happens in a sub-directory
         os.chdir('subdir')
@@ -140,7 +142,7 @@ class TestLS(TestCaseWithTransport):
         self.ls_equals('.bzrignore\n'
                        'a\n'
                        'subdir/\n'
-                       , '--from-root --non-recursive')
+                       , '--from-root', recursive=False)
 
     def test_ls_path(self):
         """If a path is specified, files are listed with that prefix"""
